subprojects {
    version = '0.0.1'
    group = 'com.stehno.effigy'

    apply plugin:'groovy'
	apply plugin:'maven-publish'
    apply plugin: 'codenarc'

    compileJava {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }

    compileGroovy {
        groovyOptions.optimizationOptions.indy = false
    }

    repositories {
        jcenter()
    }

	dependencies {
		compile 'org.codehaus.groovy:groovy-all:2.3.7'
	}

    test {
        jvmArgs '-Xverify:none'
    }

    codenarc {
        toolVersion = '0.22'
    }

    codenarcMain {
        ignoreFailures false
        configFile file('../config/codenarc/codenarc-main.rules')

        maxPriority1Violations 0
        maxPriority2Violations 10
        maxPriority3Violations 20
    }

    codenarcTest {
        // we won't fail the build for test inspection errors
        ignoreFailures true
        configFile file('../config/codenarc/codenarc-test.rules')
    }
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.2.1'
}